--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="logo">
-       <img src="images/imgperf.JPG" alt="Foto de perfil" />
+       <img src="./images/imgperf.JPG" alt="Foto de perfil" />
       </div>
     </header>
     <main>
